--- a/src/Pages/User/Homepage/Homepage.css
+++ b/src/Pages/User/Homepage/Homepage.css
@@ -66,7 +66,6 @@
   font-family: "Arial", sans-serif;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
-  padding: 50px 20px;
 }
 
 .color-body h1 {
